# assets-project

./: .env_example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
assets/: admin.py  tasks.py  urls.py
assets/clients/: br_api_client.py
assets/forms/: forms.py
assets/migrations/: 0001_initial.py
assets/models/: __init__.py  assets.py
assets/templates/assets/: create-asset.html  list-assets.html  update-asset.html
assets/templates/assets-price-history/: list-assets-price-history.html
assets/utils/: emails.py  external_requests.py
assets/views/: __init__.py  assets.py  assets_price_history.py
assets_auth/: apps.py  urls.py
assets_auth/forms/: forms.py
assets_auth/migrations/: 0001_initial.py
assets_auth/models/: __init__.py  user.py
assets_auth/static/css/: styles.css
assets_auth/templates/: base-home.html  base.html
assets_auth/templates/components/: nav.html  pagination.html
assets_auth/templates/registration/: login.html
assets_auth/templates/sign-up/: sign-up.html
assets_auth/views/: __init__.py  auth.py
assetsproject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
management/: urls.py
management/models/: __init__.py
