[project]
name = "assets-project"
version = "1"
requires-python = ">=3.9"
dependencies = [
    "django==4.2.20",
    "numpy==1.24.3",
    "psycopg2-binary==2.8.6",
    "psycopg2==2.9.1",
    "python-dateutil==2.9.0",
    "django-crispy-forms==2.4",
    "crispy-bootstrap4==2025.6",
    "django-celery-beat==2.8.1",
    "django-redis==5.4.0",
    "requests==2.32.3",
    "pip-tools"
]

[tool.setuptools]
py-modules = []
